[gd_scene load_steps=2 format=3 uid="uid://bo6jo6qgf03tt"]

[ext_resource type="Script" path="res://ui/items/combining.gd" id="1_sc6oy"]

[node name="items" type="CanvasLayer"]
script = ExtResource("1_sc6oy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 45.0
offset_top = 48.0
offset_right = 562.0
offset_bottom = 287.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Item2" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Item3" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item4" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Item5" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Item6" type="Button" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 276.0
offset_top = 472.0
offset_right = 463.0
offset_bottom = 982.0
text = "BATTERY + SUN = BASED
TEST1 + TEST2 = TEST3"
